--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Jeff Wang
 permalink: ':title/'
 baseurl: "jw_home" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://siragathon.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author Settings
 author: Jeff Wang # add your name
