--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Jeff Wang
 permalink: ':title/'
-baseurl: "jw_home" # the subpath of your site, e.g. /blog
+baseurl: "/jw_home" # the subpath of your site, e.g. /blog
 url: "http://siragathon.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author Settings
