removed _site folder and modified paragraph in config.

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # Author Settings
 author: Jeff Wang # add your name
 author-img: jw.jpg # add your photo
-about-author: I seek to push the limits of human knowledge. My current focus is on statistical and econometrical methods. # add description
+about-author: Uploading my consciousness. # add description
 social-facebook: wjangeff # add your Facebook handle
 social-github: SirAgathon # add your Github handle
 social-linkedin: jeff-wang-00 # add your Linkedin handle
